part-2/exercise_2-04/manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwk-project-be-dep
  namespace: dwk-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-project-be
  template:
    metadata:
      labels:
        app: dwk-project-be
    spec:
      containers:
        - name: dwk-project-backend
          image: ethanrailo/dwk-project-backend:version1.0
