part-2/exercise_2-04/manifests/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwk-project-fe-dep
  namespace: dwk-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-project-fe
  template:
    metadata:
      labels:
        app: dwk-project-fe
    spec:
      volumes:
        - name: shared-vol
          persistentVolumeClaim:
            claimName: dwk-project-volume-claim
      containers:
        - name: dwk-project-frontend
          image: ethanrailo/dwk-project-frontend:version1.0
          volumeMounts:
            - name: shared-vol
              mountPath: /usr/src/app/files
