part-2/exercise_2-04/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-project-ingress
  namespace: dwk-project
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dwk-project-frontend-svc
                port:
                  number: 2346
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: dwk-project-backend-svc
                port:
                  number: 2348
